<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="uid_label">Media</string>
    <string name="storage_description">Local storage</string>
    <string name="picker_app_label">Media picker</string>
    <string name="artist_label">Artist</string>
    <string name="unknown">Unknown</string>
    <string name="root_images">Images</string>
    <string name="root_videos">Videos</string>
    <string name="root_audio">Audio</string>
    <string name="root_documents">Documents</string>
    <string name="permission_required">Permission required to modify or delete this item.</string>
    <string name="permission_required_action">Continue</string>
    <string name="grant_dialog_button_allow">Allow</string>
    <string name="grant_dialog_button_deny">Deny</string>
    <string name="permission_more_thumb"> {count, plural,
        =1    {+<xliff:g id="count" example="1">^1</xliff:g>}
        other {+<xliff:g id="count" example="42">^1</xliff:g>}
    }</string>
    <string name="permission_more_text"> {count, plural,
        =1    {Plus <xliff:g id="count" example="1">^1</xliff:g> additional item}
        other {Plus <xliff:g id="count" example="42">^1</xliff:g> additional items}
    }</string>
    <string name="cache_clearing_dialog_title">Clear temporary app files</string>
    <string name="cache_clearing_dialog_text"><xliff:g id="app_seeking_permission" example="File manager">%s</xliff:g> would like to clear some temporary files. This may result in an increased usage of battery or cellular data.</string>
    <string name="cache_clearing_in_progress_title">Clearing temporary app files\u2026</string>
    <string name="clear">Clear</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="picker_browse">Browse\u2026</string>
    <string name="picker_settings">Settings</string>
    <string name="picker_settings_system_settings_menu_title">Cloud media settings</string>
    <string name="picker_settings_title">Cloud media settings</string>
    <string name="picker_settings_description">Access your cloud media when an app or website asks you to select photos or videos</string>
    <string name="picker_settings_selection_message">Access cloud media from</string>
    <string name="picker_settings_no_provider">None</string>
    <string name="picker_settings_toast_error">Could not change cloud media app at this time.</string>
    <string name="picker_sync_notification_channel">Media picker</string>
    <string name="picker_sync_notification_title">Media picker</string>
    <string name="picker_sync_notification_text">Syncing media&#8230;</string>
    <string name="add">Add</string>
    <string name="deselect">Deselect</string>
    <string name="deselected">Deselected</string>
    <string name="select">Select</string>
    <string name="selected">Selected</string>
    <string name="select_up_to"> {count, plural,
        =1    {Select up to <xliff:g id="count" example="1">^1</xliff:g> item}
        other {Select up to <xliff:g id="count" example="42">^1</xliff:g> items}
    }</string>
    <string name="recent">Recent</string>
    <string name="picker_photos_empty_message">No photos or videos</string>
    <string name="picker_album_media_empty_message">No supported photos or videos</string>
    <string name="picker_albums_empty_message">No albums</string>
    <string name="picker_view_selected">View selected</string>
    <string name="picker_photos">Photos</string>
    <string name="picker_videos">@string/root_videos</string>
    <string name="picker_albums">Albums</string>
    <string name="picker_preview">Preview</string>
    <string name="picker_work_profile">Switch to work</string>
    <string name="picker_personal_profile">Switch to personal</string>
    <string name="picker_personal_profile_label">Personal</string>
    <string name="picker_profile_admin_title">Blocked by your admin</string>
    <string name="picker_profile_admin_msg_from_personal">Accessing work data from a personal app is not permitted</string>
    <string name="picker_profile_admin_msg_from_work">Accessing personal data from a work app is not permitted</string>
    <string name="picker_profile_admin_msg">Accessing <xliff:g id="profile1" example="work">%1$s</xliff:g> data from a <xliff:g id="profile2" example="personal">%2$s</xliff:g> app is not permitted</string>
    <string name="picker_profile_switch_message">Switch to <xliff:g id="profile" example="personal">%s</xliff:g></string>
    <string name="picker_profile_work_paused_title">Work apps are paused</string>
    <string name="picker_profile_paused_title"><xliff:g id="profile" example="work">%s</xliff:g> apps are paused</string>
    <string name="picker_profile_work_paused_msg">To open work photos, turn on your work apps then try again</string>
    <string name="picker_profile_paused_msg">To open <xliff:g id="profile1" example="work">%1$s</xliff:g> photos, turn on your <xliff:g id="profile2" example="work">%2$s</xliff:g> apps then try again</string>
    <string name="picker_privacy_message">This app can only access the photos you select</string>
    <string name="picker_header_permissions">"Select photos and videos you allow this app to access"</string>
    <string name="picker_album_item_count"> {count, plural,
        =1    {<xliff:g id="count" example="1">^1</xliff:g> item}
        other {<xliff:g id="count" example="42">^1</xliff:g> items}
    }</string>
    <string name="picker_add_button_multi_select">Add (<xliff:g id="count" example="42">^1</xliff:g>)</string>
    <string name="picker_add_button_multi_select_permissions">Allow (<xliff:g id="count" example="42">^1</xliff:g>)</string>
    <string name="picker_add_button_allow_none_option">Allow none</string>
    <string name="picker_category_camera">Camera</string>
    <string name="picker_category_downloads">Downloads</string>
    <string name="picker_category_favorites">Favorites</string>
    <string name="picker_category_screenshots">Screenshots</string>
    <string name="picker_category_videos">@string/root_videos</string>
    <string name="picker_motion_photo_text">Motion Photo</string>
    <string name="picker_item_content_desc"><xliff:g id="item_name" example="Photo">%1$s</xliff:g> taken on <xliff:g id="time" example="Jul 7, 2020, 12:00:00 AM">%2$s</xliff:g></string>
    <string name="picker_video_item_content_desc">Video taken on <xliff:g id="time" example="Jul 7, 2020, 12:00:00 AM">%1$s</xliff:g> with duration <xliff:g id="duration" example="00:03">%2$s</xliff:g></string>
    <string name="picker_photo">Photo</string>
    <string name="picker_gif">GIF</string>
    <string name="picker_motion_photo">Motion Photo</string>
    <string name="picker_mute_video">Mute video</string>
    <string name="picker_unmute_video">Unmute video</string>
    <string name="picker_play_video">Play</string>
    <string name="picker_pause_video">Pause</string>
    <string name="picker_error_snackbar">Can\'t play video</string>
    <string name="picker_error_dialog_title">Trouble playing video</string>
    <string name="picker_error_dialog_body">Check your internet connection and try again</string>
    <string name="picker_error_dialog_positive_action">Retry</string>
    <string name="not_selected">not selected</string>
    <string name="preloading_dialog_title">"Preparing your selected media"</string>
    <string name="preloading_progress_message"><xliff:g id="number_preloaded">%1$d</xliff:g> of <xliff:g id="number_total">%2$d</xliff:g> ready</string>
    <string name="preloading_cancel_button">Cancel</string>
    <string name="picker_banner_cloud_first_time_available_title">Backed up photos now included</string>
    <string name="picker_banner_cloud_first_time_available_desc">You can select photos from <xliff:g id="app_name" example="Photos">%1$s</xliff:g> account <xliff:g id="user_account" example="johndoe123@gmail.com">%2$s</xliff:g></string>
    <string name="picker_banner_cloud_account_changed_title"><xliff:g id="app_name" example="Photos">%1$s</xliff:g> account updated</string>
    <string name="picker_banner_cloud_account_changed_desc">Photos from <xliff:g id="user_account" example="johndoe123@gmail.com">%1$s</xliff:g> are now included here</string>
    <string name="picker_banner_cloud_choose_app_title">Choose cloud media app</string>
    <string name="picker_banner_cloud_choose_app_desc">To include backed up photos here, choose a cloud media app in Settings</string>
    <string name="picker_banner_cloud_choose_account_title">Choose <xliff:g id="app_name" example="Photos">%1$s</xliff:g> account</string>
    <string name="picker_banner_cloud_choose_account_desc">To include photos from <xliff:g id="app_name" example="Photos">%1$s</xliff:g> here, choose an account in the app</string>
    <string name="picker_banner_cloud_dismiss_button">Dismiss</string>
    <string name="picker_banner_cloud_choose_app_button">Choose app</string>
    <string name="picker_banner_cloud_choose_account_button">Choose account</string>
    <string name="picker_banner_cloud_change_account_button">Change account</string>
    <string name="picker_loading_photos_message">Getting all your photos</string>
    <string name="permission_write_audio"> {count, plural,
        =1    {Allow <xliff:g id="app_name" example="Gmail">^1</xliff:g> to modify this audio file?}
        other {Allow <xliff:g id="app_name" example="Gmail">^1</xliff:g> to modify <xliff:g id="count" example="42">^2</xliff:g> audio files?}
    }</string>
    <string name="permission_progress_write_audio"> {count, plural,
        =1    {Modifying audio file&#8230;}
        other {Modifying <xliff:g id="count" example="42">^1</xliff:g> audio files&#8230;}
    }</string>
    <string name="permission_write_video"> {count, plural,
        =1    {Allow <xliff:g id="app_name" example="Gmail">^1</xliff:g> to modify this video?}
        other {Allow <xliff:g id="app_name" example="Gmail">^1</xliff:g> to modify <xliff:g id="count" example="42">^2</xliff:g> videos?}
    }</string>
    <string name="permission_progress_write_video"> {count, plural,
        =1    {Modifying video&#8230;}
        other {Modifying <xliff:g id="count" example="42">^1</xliff:g> videos&#8230;}
    }</string>
    <string name="permission_write_image"> {count, plural,
        =1    {Allow <xliff:g id="app_name" example="Gmail">^1</xliff:g> to modify this photo?}
        other {Allow <xliff:g id="app_name" example="Gmail">^1</xliff:g> to modify <xliff:g id="count" example="42">^2</xliff:g> photos?}
    }</string>
    <string name="permission_progress_write_image"> {count, plural,
        =1    {Modifying photo&#8230;}
        other {Modifying <xliff:g id="count" example="42">^1</xliff:g> photos&#8230;}
    }</string>
    <string name="permission_write_generic"> {count, plural,
        =1    {Allow <xliff:g id="app_name" example="Gmail">^1</xliff:g> to modify this item?}
        other {Allow <xliff:g id="app_name" example="Gmail">^1</xliff:g> to modify <xliff:g id="count" example="42">^2</xliff:g> items?}
    }</string>
    <string name="permission_progress_write_generic"> {count, plural,
        =1    {Modifying item&#8230;}
        other {Modifying <xliff:g id="count" example="42">^1</xliff:g> items&#8230;}
    }</string>
    <string name="permission_trash_audio"> {count, plural,
        =1    {Allow <xliff:g id="app_name" example="Gmail">^1</xliff:g> to move this audio file to trash?}
        other {Allow <xliff:g id="app_name" example="Gmail">^1</xliff:g> to move <xliff:g id="count" example="42">^2</xliff:g> audio files to trash?}
    }</string>
    <string name="dialog_error_message">Try again later. Your photos will be available once the issue is resolved.</string>
    <string name="dialog_error_title">Can\'t load some Photos</string>
    <string name="dialog_button_text">Got it</string>
</resources>