<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">
    <ImageView
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:src="@drawable/error_icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_error_title"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="?android:attr/textColorPrimary"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_error_message"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorSecondary"/>

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button_text"
        android:layout_marginTop="16dp"
        android:layout_gravity="end"
        android:textColor="?attr/pickerHighlightTextColor"
        android:backgroundTint="?attr/pickerHighlightColor"/>
</LinearLayout>