<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2022 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!-- TODO(b/195009152): Use default Text and Button visibilities post backend implementation -->
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/picker_banner_margin_top"
    android:layout_marginBottom="@dimen/picker_banner_margin_bottom"
    android:layout_marginHorizontal="@dimen/picker_banner_margin_horizontal"
    app:cardBackgroundColor="?attr/pickerBannerBackgroundColor"
    app:strokeColor="?attr/pickerBannerStrokeColor"
    app:strokeWidth="@dimen/picker_banner_stroke_width">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/picker_banner_internal_padding_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/picker_banner_internal_padding_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/cloud_done"
                android:contentDescription="@null"
                android:paddingEnd="@dimen/picker_banner_icon_padding_end"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/banner_primary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/picker_banner_cloud_choose_app_title"
                    android:textSize="@dimen/picker_banner_primary_text_size"
                    android:letterSpacing="@dimen/picker_banner_primary_text_letter_spacing"
                    android:textColor="?attr/pickerBannerPrimaryTextColor"
                />

                <TextView
                    android:id="@+id/banner_secondary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/picker_banner_cloud_choose_app_desc"
                    android:textSize="@dimen/picker_banner_secondary_text_size"
                    android:letterSpacing="@dimen/picker_banner_secondary_text_letter_spacing"
                    android:textColor="?attr/pickerBannerSecondaryTextColor"
                />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/banner_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:paddingTop="@dimen/picker_banner_layout_buttons_padding_top"
            android:paddingHorizontal="@dimen/picker_banner_layout_buttons_padding_horizontal">

            <!-- TODO Add buttons dynamically to the layout post backend implementation -->
            <Button
                style="@style/Widget.Material3.Button.TextButton"
                android:id="@+id/dismiss_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picker_banner_cloud_dismiss_button"
                android:textSize="@dimen/picker_banner_button_text_size"
                android:letterSpacing="@dimen/picker_banner_button_text_letter_spacing"
                android:textColor="?attr/pickerBannerButtonTextColor"
            />

            <Button
                style="@style/Widget.Material3.Button.TextButton"
                android:id="@+id/choose_app_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picker_banner_cloud_choose_app_button"
                android:textSize="@dimen/picker_banner_button_text_size"
                android:letterSpacing="@dimen/picker_banner_button_text_letter_spacing"
                android:textColor="?attr/pickerBannerButtonTextColor"
            />

            <Button
                style="@style/Widget.Material3.Button.TextButton"
                android:id="@+id/choose_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picker_banner_cloud_choose_account_button"
                android:textSize="@dimen/picker_banner_button_text_size"
                android:letterSpacing="@dimen/picker_banner_button_text_letter_spacing"
                android:textColor="?attr/pickerBannerButtonTextColor"
                android:visibility="gone"
            />

            <Button
                style="@style/Widget.Material3.Button.TextButton"
                android:id="@+id/change_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picker_banner_cloud_change_account_button"
                android:textSize="@dimen/picker_banner_button_text_size"
                android:letterSpacing="@dimen/picker_banner_button_text_letter_spacing"
                android:textColor="?attr/pickerBannerButtonTextColor"
                android:visibility="gone"
            />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>